Added procedure of SSH into server

--- a/AWS (EC2)/1. What is AWS?.md
+++ b/AWS (EC2)/1. What is AWS?.md
@@ -32,6 +32,4 @@ Here’s a quick breakdown of the terminology:
 
 ---
 
-✅ Next Steps
-
--   [Launch a new EC2 instance](./2.%20Launching%20EC2.md)
+✅ Next Step - [Launch a new EC2 instance](./2.%20Launching%20EC2.md)
