--- a/AWS (EC2)/2. Launching EC2.md
+++ b/AWS (EC2)/2. Launching EC2.md
@@ -52,3 +52,5 @@ Review your configuration and hit **“Launch”** to create your instance.
 > 💡 **Tip**: Make sure you understand AWS Free Tier limits to avoid unexpected charges.
 
 ---
+
+✅ Next Step - Once your EC2 instance is running, then [connect to it via SSH using your Key Pair](./3.%20SSH%20into%20server.md)
