Added security group config and PM2

--- a/AWS (EC2)/3. SSH into server.md
+++ b/AWS (EC2)/3. SSH into server.md
@@ -90,3 +90,10 @@ Visit your EC2's public IP (with correct port, e.g., `:3000`) in the browser to 
 > 🛡️ Make sure the **Security Group** allows inbound traffic on the port your app is using (e.g., 3000, 80, 443).
 
 ---
+
+✅ Next Steps
+
+-   [Security Groups in AWS](4.%20Accessing%20Server%20and%20PM2.md)
+-   [Set-up PM2 ](./4.%20Accessing%20Server%20and%20PM2.md)
+
+---
