Added procedure of reverse proxy (NGINX)

--- a/AWS (EC2)/3. SSH into server.md
+++ b/AWS (EC2)/3. SSH into server.md
@@ -95,5 +95,6 @@ Visit your EC2's public IP (with correct port, e.g., `:3000`) in the browser to 
 
 -   [Security Groups in AWS](4.%20Accessing%20Server%20and%20PM2.md)
 -   [Set-up PM2 ](./4.%20Accessing%20Server%20and%20PM2.md)
+-   [Configure Nginx](./5.%20NGINX.md)
 
 ---
