--- a/AWS (EC2)/4. Accessing Server and PM2.md
+++ b/AWS (EC2)/4. Accessing Server and PM2.md
@@ -47,6 +47,8 @@ pm2 start index.js --name your-app-name -- --port 80
 
 Or configure a **reverse proxy** using **Nginx** to expose port `80` while your server listens on `3000` internally.
 
+More on reverse proxy setup: [Nginx Reverse Proxy Guide](./5.%20NGINX.md)
+
 ---
 
 ### 🌍 Try Again
@@ -82,3 +84,5 @@ pm2 startup
 ```
 
 ---
+
+✅ Next Step - [Configure Nginx](./5.%20NGINX.md)
